Added mini-game in Pay Bill menu option,  used intelliJ to clean up some warnings,
 24-11-2022